// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Set renders correctly 1`] = `
<div
  className="set false"
>
  <div
    className="tile"
  >
    Tile 1
  </div>
  <div
    className="tile"
  >
    Tile 2
  </div>
  <div
    className="tile"
  >
    Tile 3
  </div>
  <div
    className="tile"
  >
    Tile 4
  </div>
  <div
    className="tile"
  >
    Tile 5
  </div>
  <div
    className="tile"
  >
    Tile 6
  </div>
</div>
`;

exports[`Set renders correctly with Gutter 1`] = `
<div
  className="set gutter"
>
  <div
    className="tile"
  >
    Tile 1
  </div>
  <div
    className="tile"
  >
    Tile 2
  </div>
  <div
    className="tile"
  >
    Tile 3
  </div>
  <div
    className="tile"
  >
    Tile 4
  </div>
</div>
`;
